@@ -599,7 +599,7 @@ export HBASE_SETUP=yes
 
 # Version
 #
-export HBASE_VERSION="1.2.0"
+export HBASE_VERSION="1.1.4"
 
 # Path to your Hbase build/binaries
 #
